--- a/css/text.css
+++ b/css/text.css
@@ -5,7 +5,10 @@ body{
 }
 .mainVisual{
     box-sizing: 100%;
-    padding: 5%;
+    padding-top: 5%;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-bottom: 5%;
 }
 img{
      display: block;
